src/afch.css
/* GENERAL */

.hidden {
	/* seriously, just don't show it. */
	display: none !important;
}

.centered {
	text-align: center;
}

.text-left {
	text-align: left;
}

.text-right {
	text-align: right;
}

#afch-open {
	font-size: 0.5em;
	padding-left: 5px;
	line-height: 1em;
	cursor: pointer;
}

#afchReviewPanel {
	border-width: 2px;
	border-style: solid;
	font-family: Helvetica, sans-serif;
	font-size: 1.2em;
	margin-bottom: 20px;
}

#afchTopBar {
	position: relative;
	width: 100%;
	z-index: 999;
}

.top-bar-element {
	color: #FFFFFF;
	font-size: 1em;
	cursor: pointer;
	position: absolute;
	padding: 5px;
}

#afchClose {
	right: 0;
	margin-top: -0.4em;
	font-size: 1.2em;
}

#afchHeader {
	font-size: 60px;
	color: #FFFFFF;
	font-weight: bold;
	text-align: right;
	text-transform: uppercase;
	overflow: hidden;
	vertical-align: top;
}

#afchSubmitForm {
	text-align: center;
	width: 30%;
	padding: 5px;
	margin-top: 10px;
	margin-left: auto;
	margin-right: 0px;
}

#afchSubmitForm.button-centered {
	margin-left: auto;
	margin-right: auto;
}

.reload-link {
	padding-left: 5px;
	font-size: 0.7em;
}

#afchStatus {
	list-style-position: inside;
	text-align: left;
}

.header {
	height: 60px;
	line-height: 1.2em;
}

.content {
	background-color: #FFFFFF;
	padding: 10px;
}

select .afch-input {
	vertical-align: baseline;
}

.afch-textfield {
	-webkit-appearance: none;
	border: 1px solid rgb(217, 217, 217);
	border-collapse: collapse;
	box-sizing: border-box;
	cursor: auto;
	display: inline-block;
	font-size: 14px;
	height: 30px;
	margin: 0px;
	padding-left: 5px;
	vertical-align: middle;
	width: 25%;
	min-width: 150px;
}

.afch-textfield:focus {
	border: 1px solid rgb(145, 145, 145);
	outline: 0;
}

.afch-textarea {
	height: 150px;
	width: 50%;
	margin-top: 5px;
	margin-left: auto;
	margin-right: auto;
}

.afch-label {
	font-size: 0.75em;
	padding: 5px;
}

.gradient-button {
	cursor: pointer;
	text-decoration: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.gradient-button:hover {
	text-decoration: none;
	background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
}

.gradient-button:active {
	color: #111111;
	background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: -ms-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
}

div.disabled-button {
	background-color: #DDDDDD;
	text-decoration: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.afch-option {
	display: block;
	padding: 5px;
}

/* MAIN (+SPLASH) */

.initial,
.splash {
	background-color: #111111; /* black */
	border-color: #111111;
}

#afchInitialHeader {
	font-size: 25px;
	color: #FFFFFF;
	text-align: center;
	margin: 10px;
	position: relative;
}

.header-script {
	display: block;
	font-size: 15px;
	padding-bottom: 4px;
}

#afchWarnings {
	text-align: center;
	background-color: #FF851B;
	margin: 0px 10px 10px;
	padding: 5px;
}

.afch-warning {
	padding: 8px 0px;
}

.afch-warning > a {
	padding-left: 2px;
	font-size: 0.8em;
	color: black;
}

.afch-warning > a:hover {
	cursor: pointer;
	text-decoration: underline;
}

.afch-warning + .afch-warning {
	border-top: 1px solid black;
}

.afch-deletion-log {
	background-color: white;
	text-align: left;
	padding: 5px;
	margin: 10px 20px;
	border: 1px dashed black;
	max-height: 90px;
	overflow: auto;
}

.afch-deletion-log td {
	padding: 5px;
}

.afch-deletion-log .timestamp {
	color: gray;
	text-align: right;
	white-space: nowrap;
	vertical-align: top;
}

.afch-deletion-log .reason {
	font-family: monospace, Courier;
}

.afch-deletion-log .actor {
	color: gray;
	font-size: 0.75em;
	white-space: nowrap;
}

div.afch-code-wrapper > pre {
	padding: 0.1em;
	display: inline;
}

#afchButtons {
	width: 100%;
	display: table;
	table-layout: fixed;
}

.afch-button {
	vertical-align: middle;
	height: 2em;
	font-size: 1.5em;
	color: #111111; /* black font color */
	text-align: center;
	padding: 5px;
	display: table-cell;
}

#afchExtra {
	width: 11px;
	background-color: white;
}

#afchExtra .extra-wrapper {
	height: 100%;
	width: 100%;
	vertical-align: top;
	position: relative;
}

#afchExtra .extra-open {
	position: absolute;
	left: -13px;
	top: 15px;
	height: 100%;
}

#afchExtra .extra-links {
	text-align: left;
	padding-top: 5px;
	padding-left: 18px;
}

#afchExtra a {
	display: none;
	font-size: 0.7em;
	cursor: pointer;
	color: black;
}

#afchExtra a:hover {
	text-decoration: underline;
}

/* ACCEPT */

.accept {
	background-color: #2ECC40; /* green */
	border-color: #2ECC40;
}

.accept label, .accept input {
	display: inline-block;
}

.accept label {
	margin-top: 12px;
	width: 15%;
	text-align: left;
}

.accept label + .accept input {
	width: 30%;
	margin: 0 10% 0 4%;
}

.accept input + .accept input {
	float: right;
}

select#lifeStatus.afch-input {
	vertical-align: middle;
}

#titleStatus {
	font-size: 0.75em;
	color: #FF4136;
}

.bad-input, .bad-input:focus {
	border-color: #FF4136;
}

.accept .chzn-container {
	margin-top: 10px;
	vertical-align: bottom;
}

/* Supplement jquery.chosen hackery; this is for the "manually add project" link. */
#newWikiProjects_chzn a {
	cursor: pointer;
}

/*
	Since we're hacking this dynamic suggestion feature into
	jquery.chosen, we have to manually set the width of the input.
	(see "Offer dynamic category suggestions" in submissions.js)
*/
#newCategories_chzn input {
	width: 110% !important;
}

/* DECLINE */

.decline {
	background-color: #FF4136; /* red */
	border-color: #FF4136;
}

#declineInputWrapper {
	padding-top: 5px;
}

/* COMMENT */

.comment {
	background-color: #FFDC00; /* yellow */
	border-color: #FFDC00;
}

#commentText {
	height: 100px;
	width: 60%;
}

/* TAG FOR G13 DELETION */

.g13 {
	background-color: #FF851B; /* orange */
	border-color: #FF851B;
}

/* SUBMIT */

.submit {
	background-color: #0074D9; /* blue */
	border-color: #0074D9;
}

/* MARK/UNMARK AS UNDER REVIEW */

.mark {
	background-color: #0074D9; /* blue */
	border-color: #0074D9;
}

/* OTHER */

.other-action {
	background-color: #FFDC00; /* yellow */
	border-color: #FFDC00;
}

